# TelemetryDeckPy

./: .gitignore  LICENSE  README.md  requirements-dev.txt  setup.cfg  setup.py
src/telemetrydeckpy/: __init__.py  signal.py  telemetrydeck.py
src/tests/: signal_test.py  telemetrydeck_test.py
