[metadata]
name = telemetrydeckpy
version = 1.0.0
author = Thore D. Jahn
author_email = python@kurzgedanke.me
description = My package description
long_description = file: README.md, LICENSE
keywords = one, two
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.10
install_requires =
    requests

[options.package_data]
* = *.md, *.txt

[options.packages.find]
where=src
exclude =
    examples*
    tools*
    docs*
    my_package.tests*